# Storyloom

./: .gitattributes  .gitignore  AI开发完整交接手册.md  AI接手开发指南.md  CHANGELOG.md  LICENSE  README.md  drizzle.config.ts  index.html  latest.json  npm-wrapper.sh  package-lock.json  package.json  plan-v2.md  plan.md  release-notes-v1.1.7.md  release-notes-v1.2.3.md  tsconfig.app.json  tsconfig.electron.json  tsconfig.server.json  vite.config.ts  vitest.config.ts  前端设计方案.md  前端问题识别与修复任务.md  功能需求规格.md  可用资源参考.md  开发路线图.md  文档变更日志.md  更新日志.md  架构与代码地图.md  浏览器兼容性测试清单.md  项目状态报告.md
docs/: AI集成指南.md  ARCHITECTURE.md  CHANGELOG-v1.1.7.md  CHANGELOG-v1.2.0.md  CHANGELOG-v1.2.1.md  DEVELOPMENT.md  HANDOVER-v1.2.0.md  INDEX.md  README.md  RELEASING.md  REWRITE-WORKSPACE-TIMELINE.md  agents.md  architecture-research.md  frontend-visual-architecture.md  交接-v1.2.0.md  发版指南.md  工作区与时间轴重构蓝图.md  开发指南.md  快速开始.md  文档索引.md  更新日志-v1.1.5.md  更新日志-v1.1.6.md  更新日志-v1.1.7.md  更新日志-v1.2.0.md  更新日志-v1.2.2.md  更新日志-v1.5.0.md  更新日志.md  架构设计.md  环境配置指南.md  美术方案-v2.md  路线图-v1.3+.md  路线图.md  项目交接.md
electron/: loading.html  main.ts  preload.ts  updater.ts
reports/: animation-architecture-current.md  architecture-analysis.md  backend-fixes-v2.md  competitor-analysis.md  filesystem-fixes-v2.md  gsap-animation-feasibility.md  pixijs-webgl-feasibility.md  project-survey.md
scripts/: capture_console.py  (+15 more)
src-tauri/: Cargo.toml  signing-keys-v5.key  signing-keys-v5.key.pub  signing-keys.key  signing-keys.key.pub  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: SimpChinese.nsh  installer.nsi
(+263 files in other folders)
