[package]
name = "storyloom"
version = "1.1.0"
description = "Storyloom · 织叙 — 用一根时间线，把故事织成宇宙"
authors = ["Storyloom Team"]
license = "MIT"
repository = "https://github.com/YJLZSL/Storyloom"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "storyloom"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
